--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 	"dependencies": {
 		"@picocss/pico": "2.0.0-alpha1",
 		"@supabase/supabase-js": "^2.39.0",
-		"@vercel/analytics": "^1.1.2"
+		"@vercel/analytics": "^1.1.2",
+		"html-to-image": "^1.11.11"
 	}
 }
